# videoconference-recording-system

./: .env.sample  .gitignore  README.md  docker-compose.yml
backend/: .env.sample  Dockerfile  main.py  pyproject.toml
backend/app/: utils.py
backend/app/persistence/: postgres.py
backend/app/routers/: api.py  pages.py
backend/app/schemas/: conference.py  user.py
backend/app/utils/: auth.py  recording.py
backend/static/: index.css  index.js  signx.css  signx.js
backend/templates/: app_base.html  base.html  conference.html  history.html  in-progress.html  index.html  recording.html  settings.html  signx.html
bots-orchestrator/: .env.sample  Dockerfile  main.py  pyproject.toml
bots-orchestrator/app/: schema.py
bots-orchestrator/app/orchestrator/: __init__.py  conference_bot.py  exceptions.py  orchestrator.py
bots-orchestrator/app/persistence/: postgres.py
database/: create_tables.sql
scheduler/: .dockerignore  .env.sample  Dockerfile  main.py  pyproject.toml
scheduler/app/: orchestrator_client.py  postgres.py  schema.py
selenoid/config/: browsers.json
