[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ForeverProglamer <jet.shustriy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
PyPika = "^0.48.9"
psycopg2 = "^2.9.6"
bcrypt = "^4.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
