[tool.poetry]
name = "scheduler"
version = "0.1.0"
description = ""
authors = ["ForeverProglamer <jet.shustriy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
psycopg2 = "^2.9.6"
pypika = "^0.48.9"
pydantic = "^1.10.8"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
